# nas-file-manager

./: ._.git  README.md  development-plan.md  index.html  package-lock.json  package.json  prd.md  tailwind.config.js  technical-architecture.md  test_url.rs  vite.config.ts
.trae/documents/: excel-splitter-prd.md  excel-splitter-tech.md
docs/superpowers/plans/: 2026-04-16-file-download.md  2026-04-24-batch-operations.md  2026-04-24-lightbox.md  2026-04-24-retire-smb.md  2026-04-24-smb-osascript.md  2026-04-24-smb-revert.md  2026-04-24-smb-root-discovery.md  2026-04-24-smb-subfolder.md  2026-04-25-file-upload-design.md  2026-04-25-windows-adaptation.md
docs/superpowers/specs/: 2026-04-16-file-download-design.md  2026-04-24-batch-operations-design.md  2026-04-24-lightbox-design.md
docs/visuals/: grid-mockups.html  ui-layout-mockups.html
scripts/: tauri-wrapper.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  window.json
src-tauri/src/: lib.rs  server.rs
src-tauri/src/download/: mod.rs
src-tauri/src/upload/: mod.rs
src-tauri/src/vfs/: mod.rs  smb.rs  webdav.rs
src/components/: Titlebar.tsx
src/lib/: i18n.ts  store.ts  tauri-api.ts  transfers-store.ts
src/pages/: Browser.tsx  Home.tsx  Transfers.tsx
