[package]
name = "app"
version = "0.1.0"
description = "NAS File Manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures-util = "0.3"
tokio-util = "0.7"
url = "2.5"
base64 = "0.22"
hostname = "0.4.2"
mdns-sd = "0.19.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
urlencoding = "2.1.3"
chrono = "0.4.44"
axum = "0.8.4"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
uuid = { version = "1.20.0", features = ["v4"] }
tower = { version = "0.5.3", features = ["util"] }
image = { version = "0.25.6", features = ["jpeg", "png", "webp"] }
sha2 = "0.10.9"
hex = "0.4.3"
